// @vitest-environment node
import { beforeEach, describe, expect, test, vi } from 'vitest';
import { getConnection } from '@/lib/db';
import { DELETE, GET, POST, PUT } from '@/app/api/admin/tablas/route';
import { createFakeConnection, makeRequest, readResponse, silenceConsole } from '../../../helpers/api';

vi.mock('@/lib/db', () => ({ getConnection: vi.fn() }));

const RUTA = '/api/admin/tablas';

// Respuestas falsas de los diccionarios de Oracle (user_constraints / user_tab_columns)
const pk = (columna) => ({ rows: columna ? [{ COLUMN_NAME: columna }] : [] });
const columnas = (...defs) => ({
  rows: defs.map(([COLUMN_NAME, DATA_TYPE, NULLABLE = 'Y']) => ({ COLUMN_NAME, DATA_TYPE, NULLABLE })),
});
const COLS_VIAJES = columnas(
  ['ID_VIA', 'NUMBER', 'N'],
  ['CUPOS_DISPONIBLES_VIA', 'NUMBER'],
  ['TIEMPO_SALIDA_VIA', 'DATE'],
  ['CREADO_VIA', 'TIMESTAMP(6)'],
  ['NOTA_VIA', 'VARCHAR2'],
);
const PK_PERMISOS = { rows: [{ COLUMN_NAME: 'USUARIO_ID_USU' }, { COLUMN_NAME: 'MENU_ID_ENU' }] };
const ERROR_PK_COMPUESTA = 'La tabla tiene clave primaria compuesta: no se puede modificar por id';
const COLS_MENUS =columnas(['ID_ENU', 'NUMBER', 'N'], ['CAMPO_ENU', 'VARCHAR2'], ['URL_ENU', 'VARCHAR2']);

const get = (query) => GET(makeRequest(RUTA, { query }));
const post = (query, body) => POST(makeRequest(RUTA, { method: 'POST', query, body }));
const put = (query, body) => PUT(makeRequest(RUTA, { method: 'PUT', query, body }));
const del = (query) => DELETE(makeRequest(RUTA, { method: 'DELETE', query }));

beforeEach(() => {
  vi.clearAllMocks();
  silenceConsole();
});

describe('GET /api/admin/tablas (caracterización)', () => {
  test('list: devuelve solo los nombres de user_tables (ignora tabla)', async () => {
    const conn = createFakeConnection([{ rows: [{ TABLE_NAME: 'MENUS' }, { TABLE_NAME: 'USUARIOS' }] }]);
    getConnection.mockResolvedValue(conn);

    expect(await readResponse(await get({ list: '1', tabla: 'no válida!' }))).toEqual({
      status: 200,
      body: ['MENUS', 'USUARIOS'],
    });
    expect(conn.calls).toMatchSnapshot();
    expect(conn.close).toHaveBeenCalledOnce();
  });

  test('400 si falta tabla (la conexión ya se abrió y se cierra)', async () => {
    const conn = createFakeConnection();
    getConnection.mockResolvedValue(conn);
    expect(await readResponse(await get({}))).toEqual({ status: 400, body: { error: 'tabla requerida' } });
    expect(conn.execute).not.toHaveBeenCalled();
    expect(conn.close).toHaveBeenCalledOnce();
  });

  test('400 con nombre de tabla inválido, sin consultar (E1)', async () => {
    const conn = createFakeConnection();
    getConnection.mockResolvedValue(conn);
    expect(await readResponse(await get({ tabla: 'USUARIOS; DROP TABLE X' }))).toEqual({
      status: 400,
      body: { error: 'Nombre de tabla inválido' },
    });
    expect(conn.execute).not.toHaveBeenCalled();
    expect(conn.close).toHaveBeenCalledOnce();
    expect(conn.execute).not.toHaveBeenCalled();
    expect(conn.close).toHaveBeenCalledOnce();
  });

  test('metadata=true: devuelve las columnas de user_tab_columns (nombre en mayúsculas)', async () => {
    const conn = createFakeConnection([COLS_MENUS]);
    getConnection.mockResolvedValue(conn);
    expect(await readResponse(await get({ tabla: 'menus', metadata: 'true' }))).toEqual({
      status: 200,
      body: COLS_MENUS.rows,
    });
    expect(conn.calls).toMatchSnapshot();
  });

  test('sin id: SELECT * de la tabla completa (comportamiento actual: sin autenticación, expone contraseñas)', async () => {
    const rows = [{ ID_USU: 1, CORREO_USU: 'a@x.co', CONTRASENA_USU: 'plano' }];
    const conn = createFakeConnection([{ rows }]);
    getConnection.mockResolvedValue(conn);
    expect(await readResponse(await get({ tabla: 'usuarios' }))).toEqual({ status: 200, body: rows });
    expect(conn.calls).toMatchSnapshot();
  });

  test('con id: busca la PK y filtra por ella con el id como texto (F14)', async () => {
    const rows = [{ ID_ENU: 3, CAMPO_ENU: 'Viajes' }];
    const conn = createFakeConnection([pk('ID_ENU'), { rows }]);
    getConnection.mockResolvedValue(conn);
    expect(await readResponse(await get({ tabla: 'MENUS', id: '3' }))).toEqual({ status: 200, body: rows });
    expect(conn.calls).toMatchSnapshot();
  });

  test('con id en tabla sin PK: 400 sin consultar la tabla (F13)', async () => {
    const conn = createFakeConnection([pk(null)]);
    getConnection.mockResolvedValue(conn);
    expect(await readResponse(await get({ tabla: 'LOGS', id: '1' }))).toEqual({
      status: 400,
      body: { error: 'La tabla no tiene clave primaria: no se puede operar por id' },
    });
    expect(conn.execute).toHaveBeenCalledOnce();
  });

  test('con id de texto: se bindea tal cual, así funcionan PK como PLACA_VEH (F14)', async () => {
    const conn = createFakeConnection([pk('PLACA_VEH'), { rows: [] }]);
    getConnection.mockResolvedValue(conn);
    await get({ tabla: 'VEHICULOS', id: 'ABC123' });
    expect(conn.calls[1].binds).toEqual({ id: 'ABC123' });
  });

  test('500 con un mensaje seguro, sin el texto de Oracle (S8) si falla la consulta', async () => {
    const conn = createFakeConnection([new Error('ORA-00942: table or view does not exist')]);
    getConnection.mockResolvedValue(conn);
    expect(await readResponse(await get({ tabla: 'NOEXISTE' }))).toEqual({
      status: 500,
      body: { error: 'Error interno del servidor' },
    });
    expect(conn.close).toHaveBeenCalledOnce();
  });

  test('500 si no hay conexión', async () => {
    getConnection.mockRejectedValue(new Error('sin red'));
    expect(await readResponse(await get({ tabla: 'MENUS' }))).toEqual({ status: 500, body: { error: 'Error interno del servidor' } });
  });

  test('si close() falla, responde igual y registra el error (E2)', async () => {
    const conn = createFakeConnection([{ rows: [] }]);
    conn.close.mockRejectedValue(new Error('close'));
    getConnection.mockResolvedValue(conn);
    expect((await readResponse(await get({ tabla: 'MENUS' }))).status).toBe(200);
  });
});

describe('POST /api/admin/tablas (caracterización)', () => {
  test('400 si falta tabla', async () => {
    expect(await readResponse(await post({}, { a: 1 }))).toEqual({ status: 400, body: { error: 'tabla requerida' } });
    expect(getConnection).not.toHaveBeenCalled();
  });

  test('400 con nombre de tabla inválido, sin abrir conexión (E1)', async () => {
    expect(await readResponse(await post({ tabla: 'A-B' }, { a: 1 }))).toEqual({
      status: 400,
      body: { error: 'Nombre de tabla inválido' },
    });
    expect(getConnection).not.toHaveBeenCalled();
  });

  test('400 con JSON inválido, sin abrir conexión (E1)', async () => {
    expect(await readResponse(await post({ tabla: 'VIAJES' }, '{no json'))).toEqual({
      status: 400,
      body: { error: 'El cuerpo no es un JSON válido' },
    });
    expect(getConnection).not.toHaveBeenCalled();
  });

  test('201: filtra columnas contra la metadata, omite vacíos y convierte DATE/TIMESTAMP', async () => {
    const conn = createFakeConnection([COLS_VIAJES, { rowsAffected: 1 }]);
    getConnection.mockResolvedValue(conn);

    const res = await readResponse(
      await post(
        { tabla: 'viajes' },
        {
          id_via: 10,
          CUPOS_DISPONIBLES_VIA: 3,
          tiempo_salida_via: '2026-01-02T03:04:05.000Z',
          CREADO_VIA: '2026-01-01T00:00:00.000Z',
          NOTA_VIA: '',
          COLUMNA_INEXISTENTE: 'x',
        },
      ),
    );

    expect(res).toEqual({ status: 201, body: { ok: true } });
    expect(conn.calls).toMatchSnapshot();
    expect(conn.calls[1].binds.tiempo_salida_via).toBeInstanceOf(Date);
    expect(conn.commit).not.toHaveBeenCalled();
    expect(conn.close).toHaveBeenCalledOnce();
  });

  test('sin columnas válidas: 400 sin ejecutar el INSERT (F15)', async () => {
    const conn = createFakeConnection([COLS_VIAJES]);
    getConnection.mockResolvedValue(conn);
    expect(await readResponse(await post({ tabla: 'VIAJES' }, { OTRA: 1 }))).toEqual({
      status: 400,
      body: { error: 'Ninguna columna del cuerpo coincide con la tabla' },
    });
    expect(conn.execute).toHaveBeenCalledOnce();
  });

  test('MENUS con ID_ENU: inserta sin autoCommit, da permiso a todos los usuarios y hace commit', async () => {
    const conn = createFakeConnection([
      COLS_MENUS,
      { rowsAffected: 1 },
      { rows: [{ ID_USU: 1 }, { ID_USU: 2 }] },
      { rowsAffected: 1 },
      { rowsAffected: 1 },
    ]);
    getConnection.mockResolvedValue(conn);

    const res = await readResponse(await post({ tabla: 'MENUS' }, { id_enu: '9', CAMPO_ENU: 'Nuevo', URL_ENU: '/n' }));

    expect(res).toEqual({ status: 201, body: { ok: true } });
    expect(conn.calls).toMatchSnapshot();
    expect(conn.commit).toHaveBeenCalledOnce();
    expect(conn.rollback).not.toHaveBeenCalled();
  });

  test('MENUS: si falla un permiso se loguea y sigue; igual hace commit', async () => {
    const conn = createFakeConnection([
      COLS_MENUS,
      { rowsAffected: 1 },
      { rows: [{ ID_USU: 1 }, { ID_USU: 2 }] },
      new Error('ORA-00001'),
      { rowsAffected: 1 },
    ]);
    getConnection.mockResolvedValue(conn);
    expect((await readResponse(await post({ tabla: 'MENUS' }, { ID_ENU: 9 }))).status).toBe(201);
    expect(conn.execute).toHaveBeenCalledTimes(5);
    expect(conn.commit).toHaveBeenCalledOnce();
  });

  test('MENUS sin ID_ENU: confirma el INSERT y no asigna permisos (F12)', async () => {
    const conn = createFakeConnection([COLS_MENUS, { rowsAffected: 1 }]);
    getConnection.mockResolvedValue(conn);
    expect(await readResponse(await post({ tabla: 'MENUS' }, { ID_ENU: '', CAMPO_ENU: 'X' }))).toEqual({
      status: 201,
      body: { ok: true },
    });
    expect(conn.execute).toHaveBeenCalledTimes(2);
    expect(conn.calls[1].options).toEqual({ autoCommit: false });
    expect(conn.commit).toHaveBeenCalledOnce();
    expect(conn.close).toHaveBeenCalledOnce();
  });

  test('500 con rollback si falla el INSERT en MENUS', async () => {
    const conn = createFakeConnection([COLS_MENUS, new Error('ORA-01400')]);
    getConnection.mockResolvedValue(conn);
    expect(await readResponse(await post({ tabla: 'MENUS' }, { ID_ENU: 1 }))).toEqual({
      status: 500,
      body: { error: 'Error interno del servidor' },
    });
    expect(conn.rollback).toHaveBeenCalledOnce();
    expect(conn.close).toHaveBeenCalledOnce();
  });

  test('500 sin rollback si falla el INSERT en otra tabla', async () => {
    const conn = createFakeConnection([COLS_VIAJES, new Error('ORA-02291')]);
    getConnection.mockResolvedValue(conn);
    expect(await readResponse(await post({ tabla: 'VIAJES' }, { ID_VIA: 1 }))).toEqual({
      status: 500,
      body: { error: 'Error interno del servidor' },
    });
    expect(conn.rollback).not.toHaveBeenCalled();
  });

  test('si close() falla, responde igual y registra el error (E2)', async () => {
    const conn = createFakeConnection([COLS_VIAJES, { rowsAffected: 1 }]);
    conn.close.mockRejectedValue(new Error('close'));
    getConnection.mockResolvedValue(conn);
    expect((await readResponse(await post({ tabla: 'VIAJES' }, { ID_VIA: 1 }))).status).toBe(201);
  });
});

describe('PUT /api/admin/tablas (caracterización)', () => {
  test.each([
    ['tabla', { id: '1' }],
    ['id', { tabla: 'VIAJES' }],
  ])('400 si falta %s', async (_campo, query) => {
    expect(await readResponse(await put(query, {}))).toEqual({ status: 400, body: { error: 'tabla e id requeridos' } });
    expect(getConnection).not.toHaveBeenCalled();
  });

  test('400 con nombre de tabla inválido (E1)', async () => {
    expect(await readResponse(await put({ tabla: 'x y', id: '1' }, {}))).toEqual({
      status: 400,
      body: { error: 'Nombre de tabla inválido' },
    });
    expect(getConnection).not.toHaveBeenCalled();
  });

  test('400 con JSON inválido, sin abrir conexión (E1)', async () => {
    expect(await readResponse(await put({ tabla: 'VIAJES', id: '1' }, '{no json'))).toEqual({
      status: 400,
      body: { error: 'El cuerpo no es un JSON válido' },
    });
    expect(getConnection).not.toHaveBeenCalled();
  });

  test('200: excluye la PK y columnas desconocidas, "" pasa a null, fechas a Date, id queda string', async () => {
    const conn = createFakeConnection([pk('ID_VIA'), COLS_VIAJES, { rowsAffected: 1 }]);
    getConnection.mockResolvedValue(conn);

    const res = await readResponse(
      await put(
        { tabla: 'viajes', id: '10' },
        {
          ID_VIA: 99,
          cupos_disponibles_via: 2,
          TIEMPO_SALIDA_VIA: '2026-01-02T03:04:05.000Z',
          NOTA_VIA: '',
          OTRA: 'x',
        },
      ),
    );

    expect(res).toEqual({ status: 200, body: { ok: true } });
    expect(conn.calls).toMatchSnapshot();
    expect(conn.close).toHaveBeenCalledOnce();
  });

  test('sin columnas válidas (solo la PK): 400 sin ejecutar el UPDATE (F15)', async () => {
    const conn = createFakeConnection([pk('ID_VIA'), COLS_VIAJES]);
    getConnection.mockResolvedValue(conn);
    expect(await readResponse(await put({ tabla: 'VIAJES', id: '1' }, { ID_VIA: 2 }))).toEqual({
      status: 400,
      body: { error: 'Ninguna columna del cuerpo coincide con la tabla' },
    });
    expect(conn.execute).toHaveBeenCalledTimes(2);
  });

  test('tabla sin PK: 400 sin ejecutar el UPDATE (F13)', async () => {
    const conn = createFakeConnection([pk(null)]);
    getConnection.mockResolvedValue(conn);
    expect((await readResponse(await put({ tabla: 'LOGS', id: '1' }, { NOTA: 'a' }))).status).toBe(400);
    expect(conn.execute).toHaveBeenCalledOnce();
  });

  test('404 si el registro no existe: rowsAffected = 0 (F19)', async () => {
    getConnection.mockResolvedValue(createFakeConnection([pk('ID_VIA'), COLS_VIAJES, { rowsAffected: 0 }]));
    expect(await readResponse(await put({ tabla: 'VIAJES', id: '404' }, { NOTA_VIA: 'a' }))).toEqual({
      status: 404,
      body: { error: 'Registro no encontrado' },
    });
  });

  test('PK compuesta: 400 sin ejecutar el UPDATE (F11)', async () => {
    const conn = createFakeConnection([PK_PERMISOS]);
    getConnection.mockResolvedValue(conn);
    expect(await readResponse(await put({ tabla: 'PERMISOS', id: '1' }, { MENU_ID_ENU: 3 }))).toEqual({
      status: 400,
      body: { error: ERROR_PK_COMPUESTA },
    });
    expect(conn.execute).toHaveBeenCalledOnce();
    expect(conn.close).toHaveBeenCalledOnce();
  });

  test('500 con un mensaje seguro, sin el texto de Oracle (S8) si falla el UPDATE', async () => {
    const conn = createFakeConnection([pk('ID_VIA'), COLS_VIAJES, new Error('ORA-01722')]);
    getConnection.mockResolvedValue(conn);
    expect(await readResponse(await put({ tabla: 'VIAJES', id: '1' }, { NOTA_VIA: 'a' }))).toEqual({
      status: 500,
      body: { error: 'Error interno del servidor' },
    });
    expect(conn.close).toHaveBeenCalledOnce();
  });

  test('si close() falla, responde igual y registra el error (E2)', async () => {
    const conn = createFakeConnection([pk('ID_VIA'), COLS_VIAJES, { rowsAffected: 1 }]);
    conn.close.mockRejectedValue(new Error('close'));
    getConnection.mockResolvedValue(conn);
    expect((await readResponse(await put({ tabla: 'VIAJES', id: '1' }, { NOTA_VIA: 'a' }))).status).toBe(200);
  });
});

describe('DELETE /api/admin/tablas (caracterización)', () => {
  test.each([
    ['tabla', { id: '1' }],
    ['id', { tabla: 'VIAJES' }],
  ])('400 si falta %s', async (_campo, query) => {
    expect(await readResponse(await del(query))).toEqual({ status: 400, body: { error: 'tabla e id requeridos' } });
    expect(getConnection).not.toHaveBeenCalled();
  });

  test('400 con nombre de tabla inválido (E1)', async () => {
    expect(await readResponse(await del({ tabla: 'a.b', id: '1' }))).toEqual({
      status: 400,
      body: { error: 'Nombre de tabla inválido' },
    });
    expect(getConnection).not.toHaveBeenCalled();
  });

  test('200: borra por PK con el id como texto (F14) y autoCommit (comportamiento actual: sin autenticación)', async () => {
    const conn = createFakeConnection([pk('ID_USU'), { rowsAffected: 1 }]);
    getConnection.mockResolvedValue(conn);
    expect(await readResponse(await del({ tabla: 'usuarios', id: '7' }))).toEqual({ status: 200, body: { ok: true } });
    expect(conn.calls).toMatchSnapshot();
    expect(conn.close).toHaveBeenCalledOnce();
  });

  test('PK compuesta: 400 sin ejecutar el DELETE (F11)', async () => {
    const conn = createFakeConnection([PK_PERMISOS]);
    getConnection.mockResolvedValue(conn);
    expect(await readResponse(await del({ tabla: 'PERMISOS', id: '1' }))).toEqual({
      status: 400,
      body: { error: ERROR_PK_COMPUESTA },
    });
    expect(conn.execute).toHaveBeenCalledOnce();
    expect(conn.close).toHaveBeenCalledOnce();
  });

  test('404 si no se borra ninguna fila (F19)', async () => {
    getConnection.mockResolvedValue(createFakeConnection([pk('ID_VIA'), { rowsAffected: 0 }]));
    expect(await readResponse(await del({ tabla: 'VIAJES', id: '404' }))).toEqual({
      status: 404,
      body: { error: 'Registro no encontrado' },
    });
  });

  test('tabla sin PK: 400 sin ejecutar el DELETE (F13)', async () => {
    const conn = createFakeConnection([pk(null)]);
    getConnection.mockResolvedValue(conn);
    expect((await readResponse(await del({ tabla: 'LOGS', id: '1' }))).status).toBe(400);
    expect(conn.execute).toHaveBeenCalledOnce();
  });

  test('500 con un mensaje seguro, sin el texto de Oracle (S8) si falla el DELETE', async () => {
    const conn = createFakeConnection([pk('ID_VIA'), new Error('ORA-02292')]);
    getConnection.mockResolvedValue(conn);
    expect(await readResponse(await del({ tabla: 'VIAJES', id: '1' }))).toEqual({
      status: 500,
      body: { error: 'Error interno del servidor' },
    });
    expect(conn.close).toHaveBeenCalledOnce();
  });

  test('500 con un mensaje conocido según el código de Oracle (FK con registros asociados)', async () => {
    const error = Object.assign(new Error('ORA-02292: integrity constraint (US_BYCAR.FK_X) violated'), { errorNum: 2292 });
    getConnection.mockResolvedValue(createFakeConnection([pk('ID_VIA'), error]));
    expect(await readResponse(await del({ tabla: 'VIAJES', id: '1' }))).toEqual({
      status: 500,
      body: { error: 'El registro tiene otros asociados y no se puede borrar' },
    });
  });

  test('si close() falla, responde igual y registra el error (E2)', async () => {
    const conn = createFakeConnection([pk('ID_VIA'), { rowsAffected: 1 }]);
    conn.close.mockRejectedValue(new Error('close'));
    getConnection.mockResolvedValue(conn);
    expect((await readResponse(await del({ tabla: 'VIAJES', id: '1' }))).status).toBe(200);
  });
});
