// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DELETE /api/admin/tablas (caracterización) > 200: borra por PK con el id como texto (F14) y autoCommit (comportamiento actual: sin autenticación) 1`] = `
[
  {
    "binds": {
      "tabla": "USUARIOS",
    },
    "options": undefined,
    "sql": "
    SELECT UPPER(kcu.column_name) AS column_name
    FROM information_schema.table_constraints tc
    JOIN information_schema.key_column_usage kcu
      ON tc.constraint_name = kcu.constraint_name
     AND tc.table_schema = kcu.table_schema
    WHERE tc.constraint_type = 'PRIMARY KEY'
      AND tc.table_schema = current_schema()
      AND tc.table_name = LOWER(:tabla)
    ORDER BY kcu.ordinal_position
  ",
  },
  {
    "binds": {
      "id": "7",
    },
    "options": {
      "autoCommit": true,
    },
    "sql": "
      DELETE FROM USUARIOS
      WHERE ID_USU = :id
    ",
  },
]
`;

exports[`GET /api/admin/tablas (caracterización) > con id: busca la PK y filtra por ella con el id como texto (F14) 1`] = `
[
  {
    "binds": {
      "tabla": "MENUS",
    },
    "options": undefined,
    "sql": "
    SELECT UPPER(kcu.column_name) AS column_name
    FROM information_schema.table_constraints tc
    JOIN information_schema.key_column_usage kcu
      ON tc.constraint_name = kcu.constraint_name
     AND tc.table_schema = kcu.table_schema
    WHERE tc.constraint_type = 'PRIMARY KEY'
      AND tc.table_schema = current_schema()
      AND tc.table_name = LOWER(:tabla)
    ORDER BY kcu.ordinal_position
  ",
  },
  {
    "binds": {
      "id": "3",
    },
    "options": undefined,
    "sql": "SELECT * FROM MENUS WHERE ID_ENU = :id",
  },
]
`;

exports[`GET /api/admin/tablas (caracterización) > list: devuelve solo los nombres de user_tables (ignora tabla) 1`] = `
[
  {
    "binds": {},
    "options": undefined,
    "sql": "
        SELECT UPPER(table_name) AS table_name
        FROM information_schema.tables
        WHERE table_schema = current_schema()
          AND table_type = 'BASE TABLE'
        ORDER BY table_name
      ",
  },
]
`;

exports[`GET /api/admin/tablas (caracterización) > metadata=true: devuelve las columnas de user_tab_columns (nombre en mayúsculas) 1`] = `
[
  {
    "binds": {
      "tabla": "MENUS",
    },
    "options": undefined,
    "sql": "
    SELECT UPPER(column_name) AS column_name,
           CASE
             WHEN data_type IN ('numeric', 'bigint', 'integer', 'smallint') THEN 'NUMBER'
             WHEN data_type = 'character varying' THEN 'VARCHAR2'
             WHEN data_type = 'text' THEN 'CLOB'
             WHEN data_type = 'timestamp without time zone' THEN 'DATE'
             WHEN data_type = 'timestamp with time zone' THEN 'TIMESTAMP(6) WITH LOCAL TIME ZONE'
             ELSE UPPER(data_type)
           END AS data_type,
           CASE is_nullable WHEN 'YES' THEN 'Y' ELSE 'N' END AS nullable
    FROM information_schema.columns
    WHERE table_schema = current_schema()
      AND table_name = LOWER(:tabla)
    ORDER BY ordinal_position
  ",
  },
]
`;

exports[`GET /api/admin/tablas (caracterización) > sin id: SELECT * de la tabla completa (comportamiento actual: sin autenticación, expone contraseñas) 1`] = `
[
  {
    "binds": {},
    "options": undefined,
    "sql": "SELECT * FROM USUARIOS",
  },
]
`;

exports[`POST /api/admin/tablas (caracterización) > 201: filtra columnas contra la metadata, omite vacíos y convierte DATE/TIMESTAMP 1`] = `
[
  {
    "binds": {
      "tabla": "VIAJES",
    },
    "options": undefined,
    "sql": "
    SELECT UPPER(column_name) AS column_name,
           CASE
             WHEN data_type IN ('numeric', 'bigint', 'integer', 'smallint') THEN 'NUMBER'
             WHEN data_type = 'character varying' THEN 'VARCHAR2'
             WHEN data_type = 'text' THEN 'CLOB'
             WHEN data_type = 'timestamp without time zone' THEN 'DATE'
             WHEN data_type = 'timestamp with time zone' THEN 'TIMESTAMP(6) WITH LOCAL TIME ZONE'
             ELSE UPPER(data_type)
           END AS data_type,
           CASE is_nullable WHEN 'YES' THEN 'Y' ELSE 'N' END AS nullable
    FROM information_schema.columns
    WHERE table_schema = current_schema()
      AND table_name = LOWER(:tabla)
    ORDER BY ordinal_position
  ",
  },
  {
    "binds": {
      "CREADO_VIA": 2026-01-01T00:00:00.000Z,
      "CUPOS_DISPONIBLES_VIA": 3,
      "id_via": 10,
      "tiempo_salida_via": 2026-01-02T03:04:05.000Z,
    },
    "options": {
      "autoCommit": true,
    },
    "sql": "
      INSERT INTO VIAJES
      (ID_VIA, CUPOS_DISPONIBLES_VIA, TIEMPO_SALIDA_VIA, CREADO_VIA)
      VALUES (:id_via, :CUPOS_DISPONIBLES_VIA, :tiempo_salida_via, :CREADO_VIA)
    ",
  },
]
`;

exports[`POST /api/admin/tablas (caracterización) > MENUS con ID_ENU: inserta sin autoCommit, da permiso a todos los usuarios y hace commit 1`] = `
[
  {
    "binds": {
      "tabla": "MENUS",
    },
    "options": undefined,
    "sql": "
    SELECT UPPER(column_name) AS column_name,
           CASE
             WHEN data_type IN ('numeric', 'bigint', 'integer', 'smallint') THEN 'NUMBER'
             WHEN data_type = 'character varying' THEN 'VARCHAR2'
             WHEN data_type = 'text' THEN 'CLOB'
             WHEN data_type = 'timestamp without time zone' THEN 'DATE'
             WHEN data_type = 'timestamp with time zone' THEN 'TIMESTAMP(6) WITH LOCAL TIME ZONE'
             ELSE UPPER(data_type)
           END AS data_type,
           CASE is_nullable WHEN 'YES' THEN 'Y' ELSE 'N' END AS nullable
    FROM information_schema.columns
    WHERE table_schema = current_schema()
      AND table_name = LOWER(:tabla)
    ORDER BY ordinal_position
  ",
  },
  {
    "binds": {
      "CAMPO_ENU": "Nuevo",
      "URL_ENU": "/n",
      "id_enu": "9",
    },
    "options": {
      "autoCommit": false,
    },
    "sql": "
      INSERT INTO MENUS
      (ID_ENU, CAMPO_ENU, URL_ENU)
      VALUES (:id_enu, :CAMPO_ENU, :URL_ENU)
    ",
  },
  {
    "binds": undefined,
    "options": undefined,
    "sql": "SELECT ID_USU FROM USUARIOS",
  },
  {
    "binds": {
      "menuId": 9,
      "usuarioId": 1,
    },
    "options": {
      "autoCommit": false,
    },
    "sql": "INSERT INTO PERMISOS (USUARIO_ID_USU, MENU_ID_ENU) VALUES (:usuarioId, :menuId)",
  },
  {
    "binds": {
      "menuId": 9,
      "usuarioId": 2,
    },
    "options": {
      "autoCommit": false,
    },
    "sql": "INSERT INTO PERMISOS (USUARIO_ID_USU, MENU_ID_ENU) VALUES (:usuarioId, :menuId)",
  },
]
`;

exports[`PUT /api/admin/tablas (caracterización) > 200: excluye la PK y columnas desconocidas, "" pasa a null, fechas a Date, id queda string 1`] = `
[
  {
    "binds": {
      "tabla": "VIAJES",
    },
    "options": undefined,
    "sql": "
    SELECT UPPER(kcu.column_name) AS column_name
    FROM information_schema.table_constraints tc
    JOIN information_schema.key_column_usage kcu
      ON tc.constraint_name = kcu.constraint_name
     AND tc.table_schema = kcu.table_schema
    WHERE tc.constraint_type = 'PRIMARY KEY'
      AND tc.table_schema = current_schema()
      AND tc.table_name = LOWER(:tabla)
    ORDER BY kcu.ordinal_position
  ",
  },
  {
    "binds": {
      "tabla": "VIAJES",
    },
    "options": undefined,
    "sql": "
    SELECT UPPER(column_name) AS column_name,
           CASE
             WHEN data_type IN ('numeric', 'bigint', 'integer', 'smallint') THEN 'NUMBER'
             WHEN data_type = 'character varying' THEN 'VARCHAR2'
             WHEN data_type = 'text' THEN 'CLOB'
             WHEN data_type = 'timestamp without time zone' THEN 'DATE'
             WHEN data_type = 'timestamp with time zone' THEN 'TIMESTAMP(6) WITH LOCAL TIME ZONE'
             ELSE UPPER(data_type)
           END AS data_type,
           CASE is_nullable WHEN 'YES' THEN 'Y' ELSE 'N' END AS nullable
    FROM information_schema.columns
    WHERE table_schema = current_schema()
      AND table_name = LOWER(:tabla)
    ORDER BY ordinal_position
  ",
  },
  {
    "binds": {
      "NOTA_VIA": null,
      "TIEMPO_SALIDA_VIA": 2026-01-02T03:04:05.000Z,
      "cupos_disponibles_via": 2,
      "id": "10",
    },
    "options": {
      "autoCommit": true,
    },
    "sql": "
      UPDATE VIAJES
      SET CUPOS_DISPONIBLES_VIA = :cupos_disponibles_via, TIEMPO_SALIDA_VIA = :TIEMPO_SALIDA_VIA, NOTA_VIA = :NOTA_VIA
      WHERE ID_VIA = :id
    ",
  },
]
`;
